2008-10-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/plugin.scm,
	          plugins/query.scm, plugins/fileio.scm, plugins/dsl-simple.scm, plugins/sendmail.scm
	  Drop depend option because it's now not needed.

2008-10-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/plugin.scm
	  Now it's able to omit depend option or form (depend) on define-plugin macro.

	* Change: src/kahua/plugin.scm, src/kahua/kahua-server.scm, src/kahua-admin.scm,
	          test/plugin.scm, test/query.scm
	  Now initialize-plugins requires a plugin directory as an argument.  This change is
	  to support multiple plugin directories (working in progress).

2008-10-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: plugins/Makefile.in, cgi/Makefile.in, src/Makefile.in
	  Now do not make $(localstatedir) and so on.  These are needed when Kahua run on
	  old fashion working directory.  And the global plugin directory is moved to under
	  $(libdir).

	* Change: src/kahua/config.scm.in, test/config.scm, configure.ac
	  Now Kahua run on any site bundle only, so drop obsolete code and configure options. 
	  Add cgilogs to default site bundle for CGI logging.  So now default value of
	  --with-cgilogdir is "cgilogs", it's under site-root.

2008-10-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/Makefile.in
	  Remove: src/user.conf.sample, src/kahua.conf.sample
	  Now do not install the global configuration file and developer acount database.

	* Change: src/kahua-spvr.scm, src/kahua-httpd.scm,
	          src/kahua-keyserv.scm, src/kahua-server.scm
	  Now child processes check spvr is alive or not via pipe,
	  and kill themselves if spvr has gone.

2008-10-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: test/Makefile.in
	  Suppress Boehm-gc's warning message.

2008-10-24  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/config.scm.in, test/config.scm, test/session.scm
	  Drop procedure "kahua-init" because Kahua cannot work without any site bundle.